# Replay-Database

./: .dockerignore  .env.bak  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  package-lock.json  package.json
client_tool/: README.md  build.bat  build.spec  config.yaml.template  requirements.txt  test_audio_only.py  test_capture.py  test_ffmpeg_encoding.py  test_integration.py  test_live_capture.py  test_updater.py  updater.py  wows_replay_uploader.py
config/: .env.example  map_names.yaml  requirements.txt  requirements_lambda.txt  ship_name_mapping.json
deploy/: Dockerfile  Dockerfile.extractor  Dockerfile.lambda  Dockerfile.processor  basic-auth-function.js  cloudfront-distribution.json  serverless.yml
docs/: BATTLESTATS_EXTENDED_MAPPING.md  BATTLESTATS_PARSER_README.md  CD_OPTIMIZATION_PLAN.md  DISCORD_OAUTH2_PLAN.md  DYNAMODB_REDESIGN.md  INTEGRATION_TEST_PLAN.md  MULTI_SERVER_SETUP.md  QUICKSTART_LAMBDA.md  README.md  README_LAMBDA.md  REPLAY_UNIQUENESS.md  WIN_LOSS_DETECTION.md  battlestats_array_mapping.md  damage_extraction_report.md  docker-image-separation-plan.md  game-version-update.md  specification.md
rust/: wows-toolkit-patches.patch
rust/wows-replay-tool/: Cargo.toml
rust/wows-replay-tool/src/: dump_ship_names.rs  extract.rs  main.rs  output.rs  render.rs
scripts/: analyze_battlestats_indices.py  backfill_battlestats.py  backfill_captain_skills.py  backfill_clan_tags.py  backfill_component_calibers.py  backfill_search_optimization.py  backfill_ship_class.py  backfill_ship_index.py  backfill_ship_names.py  (+21 more)
(+98 files in other folders)
